Added new SQL files for schema, types, security, tables, functions, and views.

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -10,7 +10,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 parameters:
-  projectNamesConfigurations:
+  name: projectNamesConfigurations
+  type: object
+  default:
     - projectName: 'sqlmoveme'
       publishWebProject: false
       dotnetTest: false
