Add projectNameExtension parameter to azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -18,6 +18,7 @@ parameters:
         dotnetTest: false
         efMigrationScript: false
         startUpProjectName: ''
+        projectNameExtension: '.sqlproj'
   - name: serviceName
     type: string
     default: 'slqmovemecicd'
