Update azure-pipeline.yml to publish web project

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -14,7 +14,7 @@ parameters:
     type: object
     default:
       - projectName: 'sqlmoveme'
-        publishWebProject: false
+        publishWebProject: true
         dotnetTest: false
         efMigrationScript: false
         startUpProjectName: ''
