--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -7,7 +7,7 @@ resources:
     ref: feature/dacpac
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 parameters:
   - name: projectNamesConfigurations
