Add artifactsToPublish parameter to azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -28,3 +28,4 @@ stages:
     parameters:
       projectNamesConfigurations: ${{ parameters.projectNamesConfigurations}}
       serviceName: '${{ parameters.serviceName}}'
+      artifactsToPublish: ${{ parameters.artifactsToPublish}}
