Fix typo in default service name

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -17,7 +17,7 @@ parameters:
         projectExtension: '.sqlproj'
   - name: serviceName
     type: string
-    default: 'slqmovemecicd'
+    default: 'sqlmoveemecicd'
   - name: artifactsToPublish
     type: object
     default: ['security']
