Add msbuildArguments parameter to azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -15,6 +15,7 @@ parameters:
     default:
       - projectName: 'sqlmoveme'
         projectExtension: '.sqlproj'
+        msbuildArguments: '/p:VisualStudioVersion=17.0'
   - name: serviceName
     type: string
     default: 'sqlmoveemecicd'
