Update vmImage in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -7,7 +7,7 @@ resources:
     ref: feature/dacpac
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
 
 parameters:
   - name: projectNamesConfigurations
@@ -15,7 +15,6 @@ parameters:
     default:
       - projectName: 'sqlmoveme'
         projectExtension: '.sqlproj'
-        msbuildArguments: '/p:VisualStudioVersion=17.0'
   - name: serviceName
     type: string
     default: 'sqlmoveemecicd'
