Update server and database names in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -18,8 +18,8 @@ parameters:
         regionAbrvs: ['eus']
         projectExtension: '.sqlproj'
         buildArguments: '/p:NetCoreBuild=true'
-        serverName: 'moveme'
-        databaseName: 'moveme'
+        sqlServerName: 'moveme'
+        sqlDatabaseName: 'moveme'
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
   - name: serviceName
