Update SQL database name in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -19,7 +19,7 @@ parameters:
         projectExtension: '.sqlproj'
         buildArguments: '/p:NetCoreBuild=true'
         sqlServerName: 'moveme'
-        sqlDatabaseName: 'moveme'
+        sqlDatabaseName: 'sqlmoveme'
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
   - name: serviceName
