--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -22,6 +22,7 @@ parameters:
         sqlDatabaseName: 'sqlmoveme'
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
+        authenticationType: 'servicePrincipal'
   - name: serviceName
     type: string
     default: 'sqlmoveemecicd'
