Update environmentName in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -14,7 +14,7 @@ parameters:
     type: object
     default:
       - projectName: 'sqlmoveme'
-        environmentName: 'dev'
+        environmentName: 'dev2'
         regionAbrvs: ['eus']
         projectExtension: '.sqlproj'
         buildArguments: '/p:NetCoreBuild=true'
