Update build arguments and import condition in azure-pipeline.yml and sqlmoveme.sqlproj

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -17,7 +17,7 @@ parameters:
         environmentName: 'dev2'
         regionAbrvs: ['eus']
         projectExtension: '.sqlproj'
-        buildArguments: '/p:NetCoreBuild=true'
+        buildArguments: '/p:NetCoreBuild=true /dsp:Actions.sql /drp:Actions.xml'
         sqlServerName: 'moveme'
         sqlDatabaseName: 'moveme'
         ipDetectionMethod: 'AutoDetect'
