--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -17,7 +17,7 @@ parameters:
         environmentName: 'dev2'
         regionAbrvs: ['eus']
         projectExtension: '.sqlproj'
-        buildArguments: '/p:NetCoreBuild=true /dsp:Actions.sql /drp:Actions.xml'
+        buildArguments: '/p:NetCoreBuild=true'
         sqlServerName: 'moveme'
         sqlDatabaseName: 'moveme'
         ipDetectionMethod: 'AutoDetect'
@@ -37,8 +37,22 @@ stages:
       projectNamesConfigurations: ${{ parameters.projectNamesConfigurations}}
       serviceName: '${{ parameters.serviceName}}'
       artifactsToPublish: ${{ parameters.artifactsToPublish}}
-  - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main')}}:
-    - template: stages/dacpac_deploy_stage.yml@templates
-      parameters:
-        projectConfigurations: ${{ parameters.projectNamesConfigurations }}
-        serviceName: ${{ parameters.serviceName }}
+
+  - stage: Deploy
+    displayName: Deploy
+    dependsOn: Build
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+    jobs:
+      - job: Deploy
+      steps:
+      - task: Bash@3
+        inputs:
+          targetType: 'inline'
+          script: |
+          SqlPackage /Action:Publish /SourceFile:$(Pipeline.Workspace)/sqlmoveme/AdventureWorks.dacpac /TargetConnectionString:"Server=tcp:sql-moveme-dev-eus.database.windows.net,1433;Initial Catalog=sqldbmoveme;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";"
+
+  # - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main')}}:
+  #   - template: stages/dacpac_deploy_stage.yml@templates
+  #     parameters:
+  #       projectConfigurations: ${{ parameters.projectNamesConfigurations }}
+  #       serviceName: ${{ parameters.serviceName }}
