Update DacFx installation script

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -47,7 +47,10 @@ stages:
           displayName: 'upgrade sqlpackage'
           inputs:
             targetType: 'inline'
-            script: wget -O DacFramework.msi "https://aka.ms/dacfx-msi" msiexec.exe /i "DacFramework.msi" /qn
+            script: |
+              # use evergreen or specific dacfx msi link below
+              wget -O DacFramework.msi "https://aka.ms/dacfx-msi"
+              msiexec.exe /i "DacFramework.msi" /qn
         - task: Bash@3
           inputs:
             targetType: 'inline'
