--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -54,7 +54,7 @@ stages:
         - task: Bash@3
           inputs:
             targetType: 'inline'
-            script: sqlPackage /Action:Publish /SourceFile:$(Pipeline.Workspace)/sqlmoveme/AdventureWorks.dacpac /TargetConnectionString:"Server=tcp:sql-moveme-dev-eus.database.windows.net,1433;Initial Catalog=sqldbmoveme;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";"
+            script: sqlpackage /Action:Publish /SourceFile:$(Pipeline.Workspace)/sqlmoveme/AdventureWorks.dacpac /TargetConnectionString:"Server=tcp:sql-moveme-dev-eus.database.windows.net,1433;Initial Catalog=sqldbmoveme;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";"
 
   # - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main')}}:
   #   - template: stages/dacpac_deploy_stage.yml@templates
