--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -43,14 +43,10 @@ stages:
     jobs:
       - job: Deploy
         steps:
-        - task: PowerShell@2
-          displayName: 'upgrade sqlpackage'
+- task: Bash@3
           inputs:
             targetType: 'inline'
-            script: |
-              # use evergreen or specific dacfx msi link below
-              wget -O DacFramework.msi "https://aka.ms/dacfx-msi"
-              msiexec.exe /i "DacFramework.msi" /qn
+            script: dotnet tool install -g microsoft.sqlpackage
         - task: Bash@3
           inputs:
             targetType: 'inline'
