--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -20,6 +20,7 @@ parameters:
         buildArguments: '/p:NetCoreBuild=true'
         sqlServerName: 'moveme'
         sqlDatabaseName: 'moveme'
+        resourceGroupName: sqlserver
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
         authenticationType: 'servicePrincipal'
