try dacpac as part of the docker build

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,9 +14,35 @@ RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/
  RUN bash ./installSQLtools.sh \
       && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
-# [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+USER root
 
-# [Optional] Uncomment this line to install global node packages.
-# RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && npm install -g <your-package-here>" 2>&1
+RUN apt-get update \
+    && apt-get install unzip libunwind8 libicu66 libssl-dev -y
+
+
+# Install SQLPackage for Linux and make it executable
+RUN wget -progress=bar:force -q -O sqlpackage.zip https://aka.ms/sqlpackage-linux \
+    && unzip -qq sqlpackage.zip -d /opt/sqlpackage \
+    && chmod +x /opt/sqlpackage/sqlpackage \
+    && chown -R mssql /opt/sqlpackage \
+    && mkdir /tmp/db \
+    && chown -R mssql /tmp/db
+
+# Add the DACPAC to the image
+COPY sqlmoveme.dacpac /tmp/db/db.dacpac
+
+# Configure external build arguments to allow configurability.
+ARG DBNAME=sqlmoveme
+ARG PASSWORD = 'P@ssW0rd'
+
+# Configure the required environmental variables
+ENV ACCEPT_EULA=Y
+ENV SA_PASSWORD=$PASSWORD
+
+# Launch SQL Server, confirm startup is complete, deploy the DACPAC, then terminate SQL Server.
+# See https://stackoverflow.com/a/51589787/488695
+RUN ( /opt/mssql/bin/sqlservr & ) | grep -q "Service Broker manager has started" \
+    && /opt/sqlpackage/sqlpackage /a:Publish /tsn:localhost /tdn:${DBNAME} /tu:sa /tp:$SA_PASSWORD /sf:/tmp/db/db.dacpac \
+    && rm -r /tmp/db \
+    && pkill sqlservr \
+    && rm -r /opt/sqlpackage
