--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -33,3 +33,8 @@ services:
       ACCEPT_EULA: Y
     # Add "forwardPorts": ["1433"] to **devcontainer.json** to forward MSSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
+  
+  build:
+    command: 
+      - cd ../src/sqlmoveme
+      - dotnet build --configuration Release /p:NetCoreBuild=true
