--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,8 +10,8 @@ ARG NODE_VERSION="none"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
 # Install SQL Tools: SQLPackage and sqlcmd
- COPY mssql/installSQLtools.sh installSQLtools.sh
- RUN bash ./installSQLtools.sh \
+# COPY mssql/installSQLtools.sh installSQLtools.sh
+ # RUN bash ./installSQLtools.sh \
       && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
 # [Optional] Uncomment this section to install additional OS packages.
