--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -4,6 +4,7 @@ resources:
     type: github
     name: JFolberth/TheYAMLPipelineOne
     endpoint: JFolberth
+    ref: fix/dacpac_IP_detection
 
 pool:
   vmImage: 'windows-latest'
