feat: Add deploymentScope parameter to azure-pipeline.yml and update main.bicep

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -30,6 +30,10 @@ parameters:
   - name: artifactsToPublish
     type: object
     default: ['security', 'infrastructure']
+  - name: deploymentScope
+    type: string
+    default: 'resourceGroup'
+
 
 
 stages:
