--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -42,8 +42,10 @@ stages:
       projectNamesConfigurations: ${{ parameters.projectNamesConfigurations}}
       serviceName: '${{ parameters.serviceName}}'
       artifactsToPublish: ${{ parameters.artifactsToPublish}}
+      deploymentScope: ${{ parameters.deploymentScope}}
   - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main')}}:
     - template: stages/dacpac_infra_deploy_stage.yml@templates
       parameters:
         projectConfigurations: ${{ parameters.projectNamesConfigurations }}
         serviceName: ${{ parameters.serviceName }}
+        deploymentScope: ${{ parameters.deploymentScope}}
