feat: Add bicepParamExt parameter to azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -33,6 +33,9 @@ parameters:
   - name: deploymentScope
     type: string
     default: 'resourceGroup'
+  - name: bicepParamExt
+    type: boolean
+    default: true
 
 
 
