feat: Update default value for serviceName parameter in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -26,7 +26,7 @@ parameters:
         authenticationType: 'servicePrincipal'
   - name: serviceName
     type: string
-    default: 'sqlmoveemecicd'
+    default: 'bicepaadentra'
   - name: artifactsToPublish
     type: object
     default: ['security', 'infrastructure']
