feat: Update SQL server and resource group names in azure-pipeline.yml

--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -18,9 +18,9 @@ parameters:
         regionAbrvs: ['eus']
         projectExtension: '.sqlproj'
         buildArguments: '/p:NetCoreBuild=true'
-        sqlServerName: 'moveme'
+        sqlServerName: 'bicepaadentra'
         sqlDatabaseName: 'moveme'
-        resourceGroupName: sqlserver
+        resourceGroupName: bicepaadentra
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
         authenticationType: 'servicePrincipal'
