--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -4,7 +4,9 @@ resources:
     type: github
     name: JFolberth/TheYAMLPipelineOne
     endpoint: JFolberth
-    ref: feature/dacpac_infra
+
+trigger:
+  - main
 
 pool:
   vmImage: 'windows-latest'
