--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -16,20 +16,20 @@ parameters:
     type: object
     default:
       - projectName: 'sqlmoveme'
-        environmentName: 'dev2'
-        regionAbrvs: ['eus']
+        environmentName: 'dev'
+        regionAbrvs: ['cus']
         projectExtension: '.sqlproj'
         buildArguments: '/p:NetCoreBuild=true'
-        sqlServerName: 'bicepaadentra'
+        sqlServerName: 'adventureworksentra'
         sqlDatabaseName: 'moveme'
-        resourceGroupName: bicepaadentra
+        resourceGroupName: adventureworksentra
         ipDetectionMethod: 'AutoDetect'
         deployType: 'DacpacTask'
         authenticationType: 'servicePrincipal'
         projectConfiguration: 'Release'
   - name: serviceName
     type: string
-    default: 'bicepaadentra'
+    default: 'adventureworksentra'
   - name: artifactsToPublish
     type: object
     default: ['security', 'infrastructure']
