--- a/YAML/azure-pipeline.yml
+++ b/YAML/azure-pipeline.yml
@@ -26,6 +26,26 @@ stages:
         targetPath: $(Build.SourcesDirectory)/src/sqlmoveme/bin/dev
         artifact: sqlmoveme_dev_dev
         properties: ''
+  - job: build_publish_sql_sqlmoveme_tst
+    steps:
+    - task: UseDotNet@2
+      displayName: Use .NET SDK v3.1.x
+      inputs:
+        packageType: 'sdk'
+        version: 3.1.x
+        includePreviewVersions: true
+    - task: DotNetCoreCLI@2
+      displayName: dotnet build
+      inputs:
+        command: build
+        projects: $(Build.SourcesDirectory)/src/sqlmoveme/*.sqlproj
+        arguments: --configuration tst /p:NetCoreBuild=true
+    - task: PublishPipelineArtifact@1
+      displayName: 'Publish Pipeline Artifact sqlmoveme_tst_tst '
+      inputs:
+        targetPath: $(Build.SourcesDirectory)/src/sqlmoveme/bin/tst
+        artifact: sqlmoveme_tst_tst
+        properties: ''
 - stage: sqlmoveemecicd_dev_cus_dacpac_deploy
   jobs:
   - deployment: sqlmoveemecicd_app_dev_cus
@@ -47,6 +67,29 @@ stages:
               DatabaseName: sqlmoveme
               deployType: DacpacTask
               DacpacFile: $(Agent.BuildDirectory)\sqlmoveme_dev_dev\**\*.dacpac
+              AdditionalArguments: ''
+              DeleteFirewallRule: True
+- stage: sqlmoveemecicd_tst_cus_dacpac_deploy
+  jobs:
+  - deployment: sqlmoveemecicd_app_tst_cus
+    environment:
+      name: tst
+    dependsOn: []
+   
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: SqlAzureDacpacDeployment@1
+            displayName: Publish sqlmoveme on sql-adventureworksentra-tst-cus.database.windows.net
+            inputs:
+              DeploymentAction: Publish
+              azureSubscription: AzureTstServiceConnection
+              AuthenticationType: servicePrincipal
+              ServerName: sql-adventureworksentra-tst-cus.database.windows.net
+              DatabaseName: sqlmoveme
+              deployType: DacpacTask
+              DacpacFile: $(Agent.BuildDirectory)\sqlmoveme_tst_tst\**\*.dacpac
               AdditionalArguments: ''
               DeleteFirewallRule: True
 
